--- a/index.html
+++ b/index.html
@@ -34,12 +34,29 @@
         </div>
         <!-- /illustration -->
             
-        
+
     </header>
      <!-- /site header -->
-    <main>
 
+     <!-- main -->
+    <main>
+        <!-- text -->
+        <div class="text">
+            <!-- first text -->
+             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus debitis ut eligendi enim dolorem pariatur tenetur vitae hic. In itaque, sunt ipsum perspiciatis minima doloremque impedit harum aspernatur qui cumque. <span class="underline"> Ipsum dolor sit amet consectetur adipisicing</span>elit. Nemo at ea cum rerum facilis, possimus ducimus totam ad doloremque in. Nemo quidem placeat harum magni impedit accusamus quibusdam aliquid dolore?</p>
+            <!-- list -->
+            <ul class="list">
+                <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit perspiciatis illo eveniet culpa hic! Nisi qui laudantium voluptas corporis, rem libero.</li>
+                <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quasi excepturi at, distinctio quaerat eius recusandae.</li>
+                <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed aliquid repellat recusandae voluptatum quod molestias blanditiis explicabo.</li>
+            </ul>
+            <!-- table -->
+            table
+            <!-- second text -->
+            <p class="second_text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus debitis ut eligendi enim dolorem pariatur tenetur vitae hic. In itaque, sunt ipsum perspiciatis minima doloremque impedit harum aspernatur qui cumque.  <span class="underline">Ipsum dolor sit amet consectetur adipisicingelit. </span>Nemo at ea cum rerum facilis, possimus ducimus totam ad doloremque in. Nemo quidem placeat harum magni impedit accusamus quibusdam aliquid dolore?</p>
+        </div>
     </main>
+    <!-- /main -->
     <footer>
 
     </footer>
