--- a/index.html
+++ b/index.html
@@ -58,7 +58,12 @@
     </main>
     <!-- /main -->
     <footer>
-
+        <p class="title"><strong>Potrebbero interessarti</strong></p>
+        <div class="image">
+            <h2 class="image_monitor">Lorem ipsum dolor</h2>
+            <h2 class="image_graph">Lorem ipsum dolor</h2>
+        </div>
+        <copyright class="copyright">&copy; Valerio Corda</copyright>  
     </footer>
 </body>
 </html>
