--- a/index.html
+++ b/index.html
@@ -51,7 +51,41 @@
                 <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed aliquid repellat recusandae voluptatum quod molestias blanditiis explicabo.</li>
             </ul>
             <!-- table -->
-            table
+            <table class="table">
+                <thead>
+                  <tr>
+                    <th>Lorem, ipsum dolor.</th>
+                    <th>Lorem, ipsum dolor.</th>
+                    <th>Lorem, ipsum dolor.</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr class="underline_row">
+                    <td>Lorem, ipsum dolor.</td>
+                    <td>Lorem, ipsum dolor.</td>
+                    <td class="ununderline_row">
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam ipsam quam mollitia sed maxime facilis
+                      exercitationem, fugiat ea perspiciatis illo!
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>Lorem, ipsum dolor.</td>
+                    <td>Lorem, ipsum dolor.</td>
+                    <td>
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam ipsam quam mollitia sed maxime facilis
+                      exercitationem, fugiat ea perspiciatis illo!
+                    </td>
+                  </tr>
+                  <tr class="underline_row">
+                    <td>Lorem, ipsum dolor.</td>
+                    <td>Lorem, ipsum dolor.</td>
+                    <td>
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam ipsam quam mollitia sed maxime facilis
+                      exercitationem, fugiat ea perspiciatis illo!
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
             <!-- second text -->
             <p class="second_text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus debitis ut eligendi enim dolorem pariatur tenetur vitae hic. In itaque, sunt ipsum perspiciatis minima doloremque impedit harum aspernatur qui cumque.  <span class="underline">Ipsum dolor sit amet consectetur adipisicingelit. </span>Nemo at ea cum rerum facilis, possimus ducimus totam ad doloremque in. Nemo quidem placeat harum magni impedit accusamus quibusdam aliquid dolore?</p>
         </div>
